language/move-lang/tests/move_check/typing/derefrence_reference.exp
error: 

   ┌── tests/move_check/typing/derefrence_reference.move:6:16 ───
   │
 6 │         R {} = *r;
   │                ^^ Invalid dereference. Can only dereference references to copyable types
   ·
 5 │     fun t0(r: &R, b: &B) {
   │                - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/derefrence_reference.move:7:24 ───
   │
 7 │         B { r: R{} } = *b;
   │                        ^^ Invalid dereference. Can only dereference references to copyable types
   ·
 5 │     fun t0(r: &R, b: &B) {
   │                       - The type: '0x8675309::M::B'
   ·
 3 │     resource struct B { r: R }
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/derefrence_reference.move:8:15 ───
   │
 8 │         R{} = *&b.r;
   │               ^^^^^ Invalid dereference. Can only dereference references to copyable types
   ·
 3 │     resource struct B { r: R }
   │                            - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:12:16 ───
    │
 12 │         R {} = *r;
    │                ^^ Invalid dereference. Can only dereference references to copyable types
    ·
 11 │     fun t1(r: &mut R, b: &mut B) {
    │                    - The type: '0x8675309::M::R'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:13:24 ───
    │
 13 │         B { r: R{} } = *b;
    │                        ^^ Invalid dereference. Can only dereference references to copyable types
    ·
 11 │     fun t1(r: &mut R, b: &mut B) {
    │                               - The type: '0x8675309::M::B'
    ·
  3 │     resource struct B { r: R }
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:14:15 ───
    │
 14 │         R{} = *&b.r;
    │               ^^^^^ Invalid dereference. Can only dereference references to copyable types
    ·
  3 │     resource struct B { r: R }
    │                            - The type: '0x8675309::M::R'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:15:15 ───
    │
 15 │         R{} = *&mut b.r;
    │               ^^^^^^^^^ Invalid dereference. Can only dereference references to copyable types
    ·
  3 │     resource struct B { r: R }
    │                            - The type: '0x8675309::M::R'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

